fixes for pop-title

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
   <div id="pop-parent-for-bg">
       {{logo max_width=360 max_height=260}}
   </div>
+  <div id="pop-parent-for-title-links">
       {{{title}}}
-
-
+      {{pop_links}}
+  </div>
 
     
     <div id="header-separator"></div>
