fixes on pop title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <!-- Name of yur theme -->
+  <!-- Name of your theme -->
   <title>Edgefield-invivolink-tanvir</title>
   <meta itemprop="palette" content="palette-default" title="Default" data-preview="#ffffff,#222222">
   <meta itemprop="palette" content="palette-custom" title="Custom" data-preview="custom">
