--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
   <!-- Put your theme's inside this script tag. The script tag will
        prevent issues with quote escaping and invalid markup. -->
   <script id="theme" type="text/x-handlebars-template">
+  <div id="pop-parent-for-bg">
+      {{logo max_width=360}}
+  </div>
   {{#region "columnizer" id="banner-region" max_cols="1" max_auto_assets="1" dummy_content="I-4"}}
-  <div>{{logo max_width=360}}</div>
   {{#asset "imagegroup" size="1"}}
   <div class="asset-content">
       {{{imageslider images width=960 height=330 prevnext-enabled=false pager-enabled=true crop_single = true}}}
@@ -42,11 +44,9 @@
   {{/asset}}
 
   {{/region}}
-<!--
-  <div id="pop-parent-for-bg">
 
-  </div>
--->
+
+
 
   <div id="pop-parent-for-title-links">
       {{{title}}}
