--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
       {{logo max_height=0}}
 
-  {{#region "columnizer" id="banner-region" max_cols="1" max_auto_assets="1" dummy_content="I-4"}}
-          <div id="chamber-logo"></div>
+  {{#region "columnizer" id="banner-region" max_cols="1"  dummy_content="I-4"}}
   {{#asset "imagegroup" size="1"}}
-  <div class="asset-content">
+      <div id="chamber-logo"></div>
+      <div class="asset-content">
       {{{imageslider images width=960 height=330 prevnext-enabled=false pager-enabled=true crop_single = true}}}
   </div>
   {{#if_or title_visible description_visible}}
